--- a/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation.component.html
@@ -18,6 +18,7 @@
 <div class="api-navigation">
   <div class="api-navigation__menu">
     <api-navigation-title
+      *ngIf="hasTitle"
       [apiName]="this.apiName"
       [apiVersion]="this.apiVersion"
       [apiState]="this.apiState"
@@ -25,7 +26,7 @@
       [apiIsSync]="this.apiIsSync"
       [apiOrigin]="this.apiOrigin"
     ></api-navigation-title>
-    <gio-submenu>
+    <gio-submenu class="api-navigation__submenu">
       <ng-container *ngFor="let item of this.filterMenuByPermission(this.subMenuItems)">
         <gio-submenu-item *ngIf="!item.targetRoute && (!item.tabs || item.tabs.length == 0)">{{ item.displayName }}</gio-submenu-item>
         <gio-submenu-subitem
