--- a/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation.component.scss
@@ -25,8 +25,12 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    overflow-y: scroll;
-    height: calc(100vh - 54px);
+    min-height: calc(100vh - 54px);
+  }
+
+  &__submenu {
+    display: flex;
+    flex-grow: 1;
   }
 
   &__content {
