--- a/gravitee-apim-console-webui/src/shared/components/gio-api-import-dialog/gio-api-import-dialog.component.html
+++ b/gravitee-apim-console-webui/src/shared/components/gio-api-import-dialog/gio-api-import-dialog.component.html
@@ -115,7 +115,7 @@
   <button class="confirm-dialog__cancel-button" mat-flat-button [mat-dialog-close]="false">Cancel</button>
   <button
     class="confirm-dialog__confirm-button"
-    color="warn"
+    color="primary"
     mat-raised-button
     data-testid="confirm-dialog"
     [disabled]="!isImportValid"
