--- a/gravitee-apim-console-webui/src/management/api/portal/details/api-portal-details-quality/api-portal-details-quality.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/portal/details/api-portal-details-quality/api-portal-details-quality.component.scss
@@ -35,10 +35,12 @@
         }
 
         &__red-icon {
+          flex: 0 0 auto;
           color: mat.get-color-from-palette(gio.$mat-error-palette, 'default');
         }
 
         &__green-icon {
+          flex: 0 0 auto;
           color: mat.get-color-from-palette(gio.$mat-success-palette, 'darker20');
         }
       }
