--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
@@ -21,7 +21,7 @@
     <div class="virtual-host__header">
       <span>Use virtual-host to define on which entrypoint your API can be reached depending on host. </span>
 
-      <button mat-raised-button type="button" (click)="onAddVirtualHost()" color="primary">
+      <button *ngIf="!readOnly" mat-raised-button type="button" (click)="onAddVirtualHost()" color="primary">
         <mat-icon svgIcon="gio:plus"></mat-icon> Add virtual-host
       </button>
     </div>
@@ -98,7 +98,7 @@
       <ng-container matColumnDef="remove">
         <th mat-header-cell *matHeaderCellDef id="remove" width="1%"></th>
         <td mat-cell *matCellDef="let element; let i = index">
-          <button (click)="onDeleteVirtualHostClicked(i)" mat-icon-button aria-label="Button to delete a virtual host">
+          <button *ngIf="!readOnly" (click)="onDeleteVirtualHostClicked(i)" mat-icon-button aria-label="Button to delete a virtual host">
             <mat-icon svgIcon="gio:trash"></mat-icon>
           </button>
         </td>
