--- a/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation.component.scss
@@ -29,6 +29,7 @@
   }
 
   &__submenu {
+    z-index: 70;
     display: flex;
     flex-grow: 1;
   }
@@ -37,7 +38,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    height: calc(100vh - 54px);
+    min-height: calc(100vh - 54px);
     overflow-y: hidden;
 
     &__view {
