feat: migrate instance header to angular
 - create new angular component
 - add it into environment & monitoring angular component

https://graviteecommunity.atlassian.net/browse/APIM-288

--- a/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.scss
+++ b/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.scss
@@ -3,15 +3,14 @@
 @use '@gravitee/ui-particles-angular' as gio;
 @use 'src/scss/gio-layout' as gio-layout;
 
-:host {
-  @include gio-layout.gio-responsive-margin-container;
-}
-
 .gio-instance-details-environment {
+  @include gio-layout.gio-responsive-margin-container;
+
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 0 16px;
+  overflow-y: auto;
+  height: 80vh;
 
   &__cards {
     display: flex;
