--- a/gravitee-apim-console-webui/src/management/instances/details/instances-navigation/instances-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/instances/details/instances-navigation/instances-navigation.component.html
@@ -18,13 +18,12 @@
 <div class="instances-navigation">
   <gio-submenu class="instances-navigation__menu">
     <ng-container *ngFor="let item of this.subMenuItems">
-      <gio-submenu-item *ngIf="!item.targetRoute">{{ item.displayName }}</gio-submenu-item>
-      <gio-submenu-subitem
+      <gio-submenu-item
         *ngIf="item.targetRoute"
         (click)="navigateTo(item.targetRoute)"
         [active]="isActive(item.baseRoute)"
         [attr.data-testid]="item.testId"
-        >{{ item.displayName }}</gio-submenu-subitem
+        >{{ item.displayName }}</gio-submenu-item
       >
     </ng-container>
   </gio-submenu>
