--- a/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation-title/api-navigation-title.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/api-navigation/api-navigation-title/api-navigation-title.component.scss
@@ -23,7 +23,7 @@ $textColor: map.get(gio.$mat-dove-palette, default);
   display: flex;
   align-items: center;
   width: 266px;
-  padding: 8px;
+  padding: 8px 16px 8px 20px;
   background: map.get(gio.$mat-space-palette, default);
   color: $textColor;
 
