--- a/gravitee-apim-console-webui/src/management/application/details/application-navigation/application-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/application/details/application-navigation/application-navigation.component.html
@@ -19,14 +19,9 @@
   <div *ngIf="hasTitle" class="application-navigation__title">{{ this.applicationName }}</div>
   <gio-submenu class="application-navigation__menu">
     <ng-container *ngFor="let item of this.subMenuItems">
-      <gio-submenu-item *ngIf="!item.targetRoute">{{ item.displayName }}</gio-submenu-item>
-      <gio-submenu-subitem
-        *ngIf="item.targetRoute"
-        tabIndex="1"
-        (click)="navigateTo(item.targetRoute)"
-        [active]="isActive(item.baseRoute)"
-        >{{ item.displayName }}</gio-submenu-subitem
-      >
+      <gio-submenu-item *ngIf="item.targetRoute" tabIndex="1" (click)="navigateTo(item.targetRoute)" [active]="isActive(item.baseRoute)">{{
+        item.displayName
+      }}</gio-submenu-item>
     </ng-container>
   </gio-submenu>
 </div>
