--- a/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.html
+++ b/gravitee-apim-console-webui/src/management/configuration/settings-navigation/settings-navigation.component.html
@@ -16,16 +16,17 @@
 
 -->
 <div class="settings-navigation">
-  <gio-submenu>
-    <ng-container *ngFor="let item of this.filterMenuByPermission(this.subMenuItems)">
-      <gio-submenu-item *ngIf="!item.targetRoute">{{ item.displayName }}</gio-submenu-item>
-      <gio-submenu-subitem
-        *ngIf="item.targetRoute"
-        tabIndex="1"
-        (click)="navigateTo(item.targetRoute)"
-        [active]="isActive(item.baseRoute)"
-        >{{ item.displayName }}</gio-submenu-subitem
-      >
+  <gio-submenu class="settings-navigation__submenu">
+    <ng-container *ngFor="let group of this.groupItems">
+      <gio-submenu-group [title]="group.title" *ngIf="group.items && group.items.length > 0">
+        <gio-submenu-item
+          *ngFor="let item of group.items"
+          tabIndex="1"
+          (click)="navigateTo(item.targetRoute)"
+          [active]="isActive(item.baseRoute)"
+          >{{ item.displayName }}</gio-submenu-item
+        >
+      </gio-submenu-group>
     </ng-container>
   </gio-submenu>
 </div>
