feat: replace old instance detail component with angular
https://graviteecommunity.atlassian.net/browse/APIM-227

--- a/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-monitoring/instance-details-monitoring.component.scss
+++ b/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-monitoring/instance-details-monitoring.component.scss
@@ -32,6 +32,12 @@
       flex-direction: column;
       justify-content: flex-end;
       text-align: center;
+
+      &__value {
+        font-size: 30px;
+        line-height: 30px;
+        color: #1f77b4;
+      }
     }
   }
 
