--- a/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.scss
+++ b/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.scss
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    flex-grow: 1;
 
     &__card {
       &__title {
@@ -29,8 +30,19 @@
 
         & td.mat-cell {
           padding: 0 8px;
+          overflow-wrap: anywhere;
         }
       }
     }
+  }
+
+  &__started {
+    color: #429f46 !important;
+    text-transform: capitalize;
+  }
+
+  &__stopped {
+    color: red !important;
+    text-transform: capitalize;
   }
 }
