--- a/gravitee-apim-console-webui/src/shared/components/gio-form-slide-toogle/gio-form-slide-toggle.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-form-slide-toogle/gio-form-slide-toggle.component.scss
@@ -28,8 +28,7 @@ $foreground: map.get(gio.$mat-theme, foreground);
 .form-slide-toggle {
   display: flex;
   align-items: center;
-  height: 60px;
-  //   width: 100%;
+  min-height: 60px;
 
   &.appearance-fill {
     padding: 0 0.75em 0 0.75em;
@@ -47,6 +46,7 @@ $foreground: map.get(gio.$mat-theme, foreground);
       flex: 1 1 100%;
       display: flex;
       flex-direction: column;
+      padding-right: 24px;
 
       &__label-1 {
         @include mat.typography-level($typography, body-2);
