--- a/gravitee-apim-console-webui/src/management/api/proxy/components/health-check/api-proxy-health-check.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/components/health-check/api-proxy-health-check.component.scss
@@ -2,9 +2,54 @@
 @use 'node_modules/@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
-@use '../../../../scss/gio-layout' as gio-layout;
+$foreground: map.get(gio.$mat-theme, foreground);
+$typography: map.get(gio.$mat-theme, typography);
 
-:host {
-  @include gio-layout.gio-responsive-content-container;
+.health-check-card {
+  &__enable-toggle {
+    width: 100%;
+    padding-bottom: 16px;
+    padding-top: 8px;
+  }
+
+  &__trigger {
+    padding-left: 8px;
+    &__hint {
+      @include mat.typography-level($typography, caption);
+    }
+  }
+
+  &__request {
+    padding-left: 8px;
+
+    &__methods__form-field,
+    &__path__form-field,
+    &__fromRoot__toggle,
+    &__body__form-field,
+    &__http-headers__form-field {
+      width: 100%;
+      padding-bottom: 12px;
+    }
+
+    &__http-headers {
+      padding-left: 8px;
+
+      &__label {
+        @include mat.typography-level($typography, 'body-2');
+        margin-bottom: 12px;
+      }
+
+      &__hint {
+        @include mat.typography-level($typography, caption);
+      }
+    }
+  }
+
+  &__assertions {
+    padding-left: 8px;
+  }
+
+  .disabled {
+    color: mat.get-color-from-palette($foreground, disabled);
+  }
 }
-
