--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
@@ -46,6 +46,12 @@
       ></api-proxy-group-endpoint-configuration>
     </div>
   </mat-tab>
+  <mat-tab label="Health-check">
+    <!-- Configuration tab content -->
+    <div class="tab-body-wrapper">
+      <api-proxy-health-check [healthCheckForm]="healthCheckForm"></api-proxy-health-check>
+    </div>
+  </mat-tab>
 </mat-tab-group>
 
 <gio-save-bar
