--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
@@ -20,44 +20,46 @@
   Endpoint
 </h1>
 
-<mat-tab-group animationDuration="0ms">
-  <mat-tab label="General">
-    <!-- General tab content -->
-    <div class="tab-body-wrapper">
-      <api-proxy-group-endpoint-edit-general
-        *ngIf="generalForm && endpoint && supportedTypes && tenants"
-        [generalForm]="generalForm"
-        [endpoint]="endpoint"
-        [supportedTypes]="supportedTypes"
-        [tenants]="tenants"
-      ></api-proxy-group-endpoint-edit-general>
-    </div>
-  </mat-tab>
-  <mat-tab label="Configuration">
-    <!-- Configuration tab content -->
-    <div class="tab-body-wrapper">
-      <api-proxy-group-endpoint-configuration
-        *ngIf="configurationForm && configurationSchema && endpoint"
-        [configurationForm]="configurationForm"
-        [endpoint]="endpoint"
-        [configurationSchema]="configurationSchema"
-        [isReadOnly]="isReadOnly"
-        (onConfigurationChange)="onConfigurationChange($event)"
-      ></api-proxy-group-endpoint-configuration>
-    </div>
-  </mat-tab>
-  <mat-tab label="Health-check">
-    <!-- Configuration tab content -->
-    <div class="tab-body-wrapper">
-      <api-proxy-health-check [healthCheckForm]="healthCheckForm"></api-proxy-health-check>
-    </div>
-  </mat-tab>
-</mat-tab-group>
+<form gioFormFocusInvalid>
+  <mat-tab-group animationDuration="0ms">
+    <mat-tab label="General">
+      <!-- General tab content -->
+      <div class="tab-body-wrapper">
+        <api-proxy-group-endpoint-edit-general
+          *ngIf="generalForm && endpoint && supportedTypes && tenants"
+          [generalForm]="generalForm"
+          [endpoint]="endpoint"
+          [supportedTypes]="supportedTypes"
+          [tenants]="tenants"
+        ></api-proxy-group-endpoint-edit-general>
+      </div>
+    </mat-tab>
+    <mat-tab label="Configuration">
+      <!-- Configuration tab content -->
+      <div class="tab-body-wrapper">
+        <api-proxy-group-endpoint-configuration
+          *ngIf="configurationForm && configurationSchema && endpoint"
+          [configurationForm]="configurationForm"
+          [endpoint]="endpoint"
+          [configurationSchema]="configurationSchema"
+          [isReadOnly]="isReadOnly"
+          (onConfigurationChange)="onConfigurationChange($event)"
+        ></api-proxy-group-endpoint-configuration>
+      </div>
+    </mat-tab>
+    <mat-tab label="Health-check">
+      <!-- Configuration tab content -->
+      <div class="tab-body-wrapper">
+        <api-proxy-health-check [healthCheckForm]="healthCheckForm"></api-proxy-health-check>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 
-<gio-save-bar
-  class="save-bar"
-  *ngIf="!isReadOnly && endpointForm?.dirty"
-  [form]="endpointForm"
-  [formInitialValues]="initialEndpointFormValue"
-  (submitted)="onSubmit()"
-></gio-save-bar>
+  <gio-save-bar
+    class="save-bar"
+    *ngIf="!isReadOnly && endpointForm?.dirty"
+    [form]="endpointForm"
+    [formInitialValues]="initialEndpointFormValue"
+    (submitted)="onSubmit()"
+  ></gio-save-bar>
+</form>
