tests: fix Cypress UI tests
- fix gateway UI tests (broken by https://github.com/gravitee-io/gravitee-api-management/commit/71854e513415e09e6551dd0a1d90f0a1854ab1ce)
- minor UI fix in gateway details environment

--- a/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.html
+++ b/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.html
@@ -113,9 +113,9 @@
       </gio-table-wrapper>
     </mat-card>
     <mat-card class="gio-instance-details-environment__cards__card">
-      <h2 gioTableOfContents gioTableOfContentsName="Properties" class="gio-instance-details-environment__cards__card__title">
+      <h2 gioTableOfContents gioTableOfContentsName="System properties" class="gio-instance-details-environment__cards__card__title">
         <mat-icon svgIcon="gio:list"></mat-icon>
-        <span>Properties</span>
+        <span>System properties</span>
       </h2>
 
       <gio-table-wrapper
