--- a/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.scss
+++ b/gravitee-apim-console-webui/src/management/instances/instance-details/instance-details-environment/instance-details-environment.component.scss
@@ -28,9 +28,13 @@
       & table {
         width: 100%;
 
-        & td.mat-cell {
-          padding: 0 8px;
+        & td.mat-cell:not(:first-of-type) {
           overflow-wrap: anywhere;
+        }
+
+        & td.mat-cell,
+        th.mat-header-cell {
+          padding: 0 8px;
         }
       }
     }
