--- a/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.html
@@ -15,4 +15,63 @@
     limitations under the License.
 
 -->
-<p>Here is the new plan list page</p>
+<div class="title">
+  <h1>Plans</h1>
+</div>
+
+<gio-table-wrapper>
+  <table mat-table [dataSource]="plansTableDS" id="plansTable" aria-label="Plans table">
+    <!-- Display Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef id="name">Name</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.name }}
+      </td>
+    </ng-container>
+
+    <!-- Display Security Column -->
+    <ng-container matColumnDef="security">
+      <th mat-header-cell *matHeaderCellDef id="security">Security</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.security }}
+      </td>
+    </ng-container>
+
+    <!-- Display Status Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef id="status">Status</th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.status === 'PUBLISHED'" class="gio-badge-neutral">{{ element.status }}</span>
+        <span *ngIf="['DEPRECATED', 'CLOSED'].includes(element.status)" class="gio-badge-error">{{ element.status }}</span>
+        <span *ngIf="element.status === 'STAGING'" class="gio-badge-warning">{{ element.status }}</span>
+      </td>
+    </ng-container>
+
+    <!-- Display Tags Column -->
+    <ng-container matColumnDef="tags">
+      <th mat-header-cell *matHeaderCellDef id="tags">Tags</th>
+      <td mat-cell *matCellDef="let element">
+        <a>{{ element.tags }}</a>
+      </td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef id="actions"></th>
+      <td mat-cell *matCellDef="let element"></td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+    <!-- Row shown when there is no data -->
+    <tr class="mat-row" *matNoDataRow>
+      <td *ngIf="!isLoadingData && plansTableDS.length === 0" class="mat-cell" [attr.colspan]="displayedColumns.length">
+        {{ 'There is no plan (yet).' }}
+      </td>
+      <td *ngIf="isLoadingData" class="mat-cell" [attr.colspan]="displayedColumns.length">
+        {{ 'Loading...' }}
+      </td>
+    </tr>
+  </table>
+</gio-table-wrapper>
