--- a/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/portal/plans/api-portal-plan-list/api-portal-plan-list.component.scss
@@ -1,8 +1,35 @@
 @use 'sass:map';
+@use 'node_modules/@angular/material' as mat;
+@use '@gravitee/ui-particles-angular' as gio;
 @use '../../../../../scss/gio-layout' as gio-layout;
 
 $foreground: map.get(gio.$mat-theme, foreground);
 
 :host {
   @include gio-layout.gio-responsive-content-container;
+}
+
+.plans {
+  &__filters {
+    margin-bottom: 8px;
+  }
+
+  &__table {
+    width: 100%;
+    @include mat.elevation(3); // default elevation
+
+    #name {
+      width: 30%;
+    }
+
+    #status,
+    #security {
+      width: 15%;
+    }
+
+    #tags,
+    #actions {
+      width: 20%;
+    }
+  }
 }
