feat(console): impl Health Check whin inherit mode for endpoints config

--- a/gravitee-apim-console-webui/src/management/api/proxy/components/health-check-form/api-proxy-health-check-form.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/components/health-check-form/api-proxy-health-check-form.component.scss
@@ -6,10 +6,9 @@ $foreground: map.get(gio.$mat-theme, foreground);
 $typography: map.get(gio.$mat-theme, typography);
 
 .health-check-card {
-  &__enable-toggle {
+  &__enable-toggle,
+  &__inherit-toggle {
     width: 100%;
-    padding-bottom: 16px;
-    padding-top: 8px;
   }
 
   &__trigger {
