--- a/gravitee-apim-console-webui/src/management/api/proxy/components/health-check-form/api-proxy-health-check-form.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/components/health-check-form/api-proxy-health-check-form.component.html
@@ -28,7 +28,25 @@
       ></mat-slide-toggle>
     </gio-form-slide-toggle>
 
+    <!-- Inherit configuration -->
+    <gio-form-slide-toggle *ngIf="inheritHealthCheck" class="health-check-card__inherit-toggle">
+      <gio-form-label>Inherit configuration</gio-form-label>
+      <mat-slide-toggle
+        gioFormSlideToggle
+        formControlName="inherit"
+        aria-label="Inherit configuration toggle"
+        name="inheritHealthCheck"
+      ></mat-slide-toggle>
+    </gio-form-slide-toggle>
+
     <mat-divider></mat-divider>
+
+    <gio-banner-info
+      *ngIf="healthCheckForm.get('enabled').value && inheritHealthCheck && healthCheckForm.get('inherit').value"
+      class="health-check-card__assertions__banner"
+    >
+      Inherited configuration preview from global health-check settings.
+    </gio-banner-info>
 
     <div [class.disabled]="isDisabled$ | async">
       <!-- Trigger -->
