--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
@@ -50,7 +50,10 @@
     <mat-tab label="Health-check">
       <!-- Configuration tab content -->
       <div class="tab-body-wrapper">
-        <api-proxy-health-check-form [healthCheckForm]="healthCheckForm"></api-proxy-health-check-form>
+        <api-proxy-health-check-form
+          [healthCheckForm]="healthCheckForm"
+          [inheritHealthCheck]="inheritHealthCheck"
+        ></api-proxy-health-check-form>
       </div>
     </mat-tab>
   </mat-tab-group>
