fix(console): use only layout for main endpoint group page

--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.scss
@@ -9,11 +9,5 @@
 }
 
 .tab-body-wrapper {
-  margin: 8px;
-  padding: 0 40px;
-  overflow: hidden;
-}
-
-gio-save-bar.save-bar {
-  bottom: 16px;
+  margin-top: 8px;
 }
